--- a/flrweb/static/css/main.css
+++ b/flrweb/static/css/main.css
@@ -51,6 +51,11 @@ footer a:hover {
 
 
 /* End Global */
+.text-content img {
+	width: 100%;
+	height: auto;
+	display: block;
+}
 
 .navbar-custom {
 	background-color: #000;
@@ -152,3 +157,8 @@ footer a:hover {
 	background-color: #000;
 }
 
+.text-label {
+	margin: 0;
+	line-height: 1.2;
+	font-size: 15px;
+}
