user-auth and about.html

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,7 +7,7 @@
 		<small>{{ post.date_written.date }}</small>
 		<p>{{ post.content | safe }}</p>
 		{% if user.is_authenticated %}
-			{% if user.id == post.author.id %}
+			{% if user.is_staff and user.id == post.author.id %}
 				<div class="row">
 					<div class="col">
 						<a href="{% url 'post_update' post.pk %}">
