--- a/blog/templates/blog/post_index.html
+++ b/blog/templates/blog/post_index.html
@@ -4,11 +4,15 @@
 <div class="container align-items-center mt-4">
 	<h3 class="text-center mt-4 mb-4">Latest Stories</h3>
 	<div class="row">
-		<div class="col-sm-12 d-flex justify-content-center mb-4">
-			<a href="{% url 'post_add' %}">
-				<button class="btn btn-custom">Add Post</button>
-			</a>
-		</div>
+		{% if user.is_authenticated %}
+			{% if user.is_staff %}
+				<div class="col-sm-12 d-flex justify-content-center mb-4">
+					<a href="{% url 'post_add' %}">
+						<button class="btn btn-custom">Add Post</button>
+					</a>
+				</div>
+			{% endif %}
+		{% endif %}
 		{% for post in object_list %}
 			<div class="col-sm-3 mb-4">
 				<a href="{{ post.get_absolute_url }}">
