--- a/flrweb/static/css/main.css
+++ b/flrweb/static/css/main.css
@@ -1,6 +1,20 @@
 /* Global */
+/* Keyframes */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+/* End keyframes */
 
-/* meedia query */
+
+/* media query */
 
 @media screen and (max-width: 600px){
 	.custom-div {
@@ -161,4 +175,30 @@ footer a:hover {
 	margin: 0;
 	line-height: 1.2;
 	font-size: 15px;
+}
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+.fa-angle-down {
+	font-size: 60px;
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+
 }
