--- a/flrweb/templates/base.html
+++ b/flrweb/templates/base.html
@@ -32,7 +32,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
+					<a class="nav-link" href="{% url 'about' %}">About</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#">Organization</a>
