--- a/flrweb/templates/base.html
+++ b/flrweb/templates/base.html
@@ -41,7 +41,7 @@
 					<a class="nav-link" href="{% url 'post_index' %}">Blog</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Data</a>
+					<a class="nav-link" href="{% url 'seedling_overview' %}">Data</a>
 				</li>
 				<li>
 					<a class="nav-link" href="#">Planting</a>
