--- a/flrweb/templates/home.html
+++ b/flrweb/templates/home.html
@@ -43,7 +43,7 @@
 					<p>3. Re-establish the structure, productivity, and species diversity of forest</p>
 					<p>4. Ensure sufficient future timber stocking for sustainable forest management</p>
 					<div class="pt-4">
-						<a class="btn btn-custom" href="#">Why does it matter?</a>
+						<a class="btn btn-custom" href="{% url 'wdim' %}">Why does it matter?</a>
 					</div>
 				</div>
 				<div class="col-sm-4">
@@ -72,7 +72,7 @@
 					<img class="container-fluid" src="{% static 'img/explore_data.png' %}">
 					<div class="container explore-data-2">
 						<p>Data has a better idea</p>
-						<a class="btn btn-custom" href="#">Explore</a>
+						<a class="btn btn-custom" href="{% url 'seedling_overview' %}">Explore</a>
 					</div>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 					<img class="container-fluid" src="{% static 'img/explore_planting.png' %}">
 					<div class="container explore-data-2">
 						<p>Together, we could do much more</p>
-						<a class="btn btn-custom" href="#">Explore</a>
+						<a class="btn btn-custom" href="{% url 'post_index' %}">Explore</a>
 					</div>
 				</div>
 			</div>
