--- a/dms/templates/dms/seedling_delete.html
+++ b/dms/templates/dms/seedling_delete.html
@@ -1,12 +1,23 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="custom-div border rounded shadow mt-4 p-4">
-	<p><strong>Delete {{ object.local_name }}</strong></p>
-	<form method="POST">
-		{% csrf_token %}
-		<p>Are you sure?</p>
-		<button class="btn btn-danger">Delete</button>
-	</form>
+
+{% if user.is_authenticated %}
+	{% if user.is_staff %}
+		<div class="custom-div border rounded shadow mt-4 p-4">
+			<p><strong>Delete {{ object.local_name }}</strong></p>
+			<form method="POST">
+				{% csrf_token %}
+				<p>Are you sure?</p>
+				<button class="btn btn-danger">Delete</button>
+			</form>
+		</div>
+	{% endif %}
+
+{% else %}
+<div class="custom-div">
+	<p>You are not authorized</p>
 </div>
+{% endif %}
+
 {% endblock %}
