--- a/flrweb/templates/base.html
+++ b/flrweb/templates/base.html
@@ -35,7 +35,7 @@
 					<a class="nav-link" href="{% url 'about' %}">About</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Organization</a>
+					<a class="nav-link" href="{% url 'organization' %}">Organization</a>
 				</li>
 				<li>
 					<a class="nav-link" href="{% url 'post_index' %}">Blog</a>
