--- a/dms/templates/dms/seedling_overview.html
+++ b/dms/templates/dms/seedling_overview.html
@@ -17,17 +17,17 @@
 
 		<div class="row text-center">
 			<div class="col-sm-4 mb-2">
-				<a href="#">
+				<a href="{% url 'sabal_index' %}">
 					<button class="btn btn-custom">Sabal FLR Centre</button>
 				</a>
 			</div>
 			<div class="col-sm-4 mb-2">
-				<a href="#">
+				<a href="{% url 'niah_index' %}">
 					<button class="btn btn-custom">Niah FRS</button>
 				</a>
 			</div>
 			<div class="col-sm-4 mb-2">
-				<a href="#">
+				<a href="{% url 'semengoh_index' %}">
 					<button class="btn btn-custom">IFRC Semengoh</button>
 				</a>
 			</div>
