--- a/flrweb/templates/organization.html
+++ b/flrweb/templates/organization.html
@@ -1,7 +1,106 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block content %}
-<div class="custom-div">
-	<p>Organization page works</p>
-</div>
+<div class="custom-div mt-4 border shadow rounded p-4">
+		<h3 class="text-center">FLR Task Force</h3>
+		<div class="organization-container">
+			<section class="team-section text-center my-5">
+				<div class="container text-center">
+		
+					<h1 class="h1-responsive font-weight-bold my-5"></h1>
+					<div class="row">
+						<div class="col">
+							<div class="avatar mx-auto">
+								<img class="rounded-circle z-depth-1 shadow" width="150" height="150" src="{% static 'img/df.png' %}">
+							</div>
+							<h5 class="mt-4 mb-3">Datu Hamden bin Haji Mohammad</h5>
+							<p class="text-uppercase">Chairman</p>
+							<div class="d-flex justify-content-center">
+								<p class="grey-text container-fluid col-lg-3"></p>
+        					</div>
+						</div>
+					</div>
+				</div>
+				<hr class="custom-line">
+				<div class="container text-center">
+					<h1 class="h1-responsive font-weight-bold my-5"></h1>
+					<div class="row">
+						<div class="col">
+							<div class="avatar mx-auto">
+								<img class="rounded-circle z-depth-1 shadow" width="150" height="150" src="{% static 'img/ddf.png' %}">
+							</div>
+							<h5 class="font-weight-bold mt-4 mb-3">Jack anak Liam</h5>
+							<p class="text-uppercase"><strong>Co-chairman</strong></p>
+							<div class="d-flex justify-content-center">
+							<p class="grey-text container-fluid col-lg-3"></p>
+        					</div>
+						</div>
+					</div>
+				</div>
+				<hr class="custom-line">
+				<div class="container text-center">
+					<h1 class="h1-responsive font-weight-bold my-5"></h1>
+					<div class="row">
+						<div class="col">
+							<div class="avatar mx-auto">
+								<img class="rounded-circle z-depth-1 shadow" width="150" height="150" src="{% static 'img/rifd.png' %}">
+							</div>
+							<h5 class="font-weight-bold mt-4 mb-3">Zarina Haji Shebli</h5>
+							<p class="text-uppercase"><strong>Secretariat</strong></p>
+							<div class="d-flex justify-content-center">
+							<p class="grey-text container-fluid col-lg-3"></p>
+        					</div>
+						</div>
+					</div>
+				<hr class="custom-line">
+				<h1 class="h1-responsive font-weight-bold my-5"></h1>
+				<div class="row">
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">1. Secretariat</h5>
+						<p>Restoration and Industrial Forest Division</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">2. Research and Development</h5>
+						<p>Research Development and Innovation Division</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">3. Promotion and Event</h5>
+						<p>Corporate and Media Unit</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">4. Nursery Management</h5>
+						<p>Restoration and Industrial Forest Division</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">5. Planting and Monitoring</h5>
+						<p>Restoration and Industrial Forest Division</p>
+						<p>Regional Forest Office</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">6. PFE Boundary Demarcation</h5>
+						<p>Constitution and Conservation Division</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">7. Communication, Education and Public Awareness (CEPA)</h5>
+						<p>Social Forestry Division</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+					<div class="col-lg-4 col-md-6 mb-lg-0 mb-5">
+						<h5 class="mt-4 mb-3">8. Technology and Data Management</h5>
+						<p>Forest Technology and Geospatial</p>
+						<p class="grey-text container-fluid"></p>
+					</div>
+				</div>
+				<hr>
+			</section>
+		</div>
+	</div>
 {% endblock %}
