added planting program app

--- a/flrweb/templates/base.html
+++ b/flrweb/templates/base.html
@@ -44,7 +44,7 @@
 					<a class="nav-link" href="{% url 'seedling_overview' %}">Data</a>
 				</li>
 				<li>
-					<a class="nav-link" href="#">Planting</a>
+					<a class="nav-link" href="{% url 'planting_home' %}">Planting</a>
 				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
