--- a/flrweb/templates/organization.html
+++ b/flrweb/templates/organization.html
@@ -31,8 +31,8 @@
 							<div class="avatar mx-auto">
 								<img class="rounded-circle z-depth-1 shadow" width="150" height="150" src="{% static 'img/ddf.png' %}">
 							</div>
-							<h5 class="font-weight-bold mt-4 mb-3">Jack anak Liam</h5>
-							<p class="text-uppercase"><strong>Co-chairman</strong></p>
+							<h5 class="mt-4 mb-3">Jack anak Liam</h5>
+							<p class="text-uppercase">Co-chairman</p>
 							<div class="d-flex justify-content-center">
 							<p class="grey-text container-fluid col-lg-3"></p>
         					</div>
@@ -47,8 +47,8 @@
 							<div class="avatar mx-auto">
 								<img class="rounded-circle z-depth-1 shadow" width="150" height="150" src="{% static 'img/rifd.png' %}">
 							</div>
-							<h5 class="font-weight-bold mt-4 mb-3">Zarina Haji Shebli</h5>
-							<p class="text-uppercase"><strong>Secretariat</strong></p>
+							<h5 class=" mt-4 mb-3">Zarina Haji Shebli</h5>
+							<p class="text-uppercase">Secretariat</p>
 							<div class="d-flex justify-content-center">
 							<p class="grey-text container-fluid col-lg-3"></p>
         					</div>
