--- a/planting/templates/planting/planting_home.html
+++ b/planting/templates/planting/planting_home.html
@@ -12,8 +12,8 @@
 
 	<div class="border shadow rounded mt-4 p-4">
 		<h3>Join program</h3>
-		<p>You can participate in our planting programmes by register and selecting the species that you want.</p>
-		<a href="#">
+		<p>You can participate in our planting programmes by registering and selecting the species that you want.</p>
+		<a href="{% url 'item_index' %}">
 			<button class="btn btn-custom">Join program</button>
 		</a>
 	</div>
