--- a/planting/templates/planting/planting_program_add.html
+++ b/planting/templates/planting/planting_program_add.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="custom-div border rounded shadow p-4 mt-4">
-	<h5>Add planting program</h5>
-	<form method="POST">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<button class="btn btn-custom">Submit</button>
-	</form>
-</div>
+{% if user.is_authenticated %}
+	{% if user.is_staff %}
+		<div class="custom-div border rounded shadow p-4 mt-4">
+			<h5>Add planting program</h5>
+			<form method="POST">
+				{% csrf_token %}
+				{{ form.as_p }}
+				<button class="btn btn-custom">Submit</button>
+			</form>
+		</div>
+	{% endif %}
+{% else %}
+	<div class="custom-div">
+		<p>Page not found</p>
+	</div>
+{% endif %}
 {% endblock %}
